# src/APi/Rent/Controller/all-booked-space-by-vendor.controller.ts
@@ -1,0 +1,68 @@
+import { prisma } from "../../../lib/prisma.js";
+import { asyncHandler } from "../../../Utils/asyncHandler.js";
+import type { QueryType } from "../../User/user-type.js";
+import createError from "http-errors";
+import { FilterBookedSpace } from "../Repository/filter-space-by-user.repository.js";
+import { Pagination } from "../../../Utils/pagination.js";
+import { apiResponse } from "../../../Utils/apiResponse.js";
+
+export const AllBookedSpaceByVendor = asyncHandler(async (req, res) => {
+  /**
+   * get {page, limit, sortBy, sortType, search} = req.query
+   * get user = req.user
+   * if(!user) unauthorrized
+   * get all booked-space by user
+   * add links in per space
+   * add pagination
+   * res
+   */
+
+  const {
+    page = 1,
+    limit = 10,
+    sortBy = "desc",
+    sortType = "updatedAt",
+    search = "",
+  } = req.query as QueryType;
+
+  const userId = req.user?.id as string;
+  if (!userId) throw createError(401, "Unauthorized !!!");
+
+  const vendorId = req.params.vendorId as string
+  if(!vendorId) throw createError(400, 'Param id required !!!')
+
+  // get all booked space by user
+  const filterSpaces = await FilterBookedSpace({
+    page,
+    limit,
+    sortBy,
+    sortType,
+    search,
+    vendorId,
+  });
+
+  // add links
+  const bookedSpace = filterSpaces.map((space) => ({
+    ...space,
+    links: {
+      Self: `/all-booked-spaces-by-user`,
+      CustomerLink: `/users/${space.userId}`,
+      VendorLink: `/vendors/${space.vendorId}`,
+      RentalSpaceLink: `/rental-sapces/${space.rentalSpaceId}`,
+    },
+  }));
+
+  // pagination
+  const totalItems = await prisma.rent.count({
+    where: {
+      userId: userId,
+      rentalSpace: { location: { contains: search, mode: "insensitive" } },
+    },
+  });
+  const pagination = Pagination(page, limit, totalItems, 'all-booked-spaces-by-user')
+
+
+  // res 
+  res.status(200).json(new apiResponse(200, {bookedSpace, pagination}))
+
+});
